opam-version: "2.0"

version: "0.3.0"
synopsis: "Implementation of miniKanren relational (logic) EDSL: PPX extensions"
description: """\
PPX rewriters for writing relational programs more conveniently.

1) `ppx_fresh` -- a clone of original miniKanren syntax

  fresh (x...) goal

expands into

  Fresh.numeral (fun x ... -> goal)

2) `ppx_distrib` for easier generation of type-safe wrappers: distrib functor, etc...

  [%%distrib
    type t = fully_abstract_typee
    type ground = ...
  ]

3) `ppx_repr` for test. Expands `REPR(expr)` to `(string_of_expr expr, expr)`
"""

maintainer: "Dmitrii Kosarev Kakadu@pm.me"

authors: [
  "Dmitrii Boulytchev https://github.com/dboulytchev"
  "Dmitrii Kosarev https://github.com/Kakadu"
  "Evgenii Moiseenko https://github.com/eupp"
  "Petr Lozov https://github.com/Lozov-Petr"
  "JetBrains Research https://research.jetbrains.org"
]

homepage: "https://github.com/JetBrains-Research/OCanren"
bug-reports: "https://github.com/JetBrains-Research/OCanren/issues"

depends: [
  "ocaml"
  "dune"              { >= "2.5"  }
  "dune-configurator"
  "ppxlib"            { >= "0.22.0" }
  "base"
]

build: [
  ["dune" "subst"] { dev }
  ["dune" "build" "-p" name "-j" jobs]
]


dev-repo: "git+https://github.com/JetBrains-Research/OCanren.git"

url {
  src: "git+https://github.com/JetBrains-Research/OCanren"
}
