opam-version: "2.0"
version: "0.2.0"

description: "Implementation of miniKanren relational (logic) EDSL"
synopsis: """\
The family of miniKanren derivatives has many implementations. This
one is typed embedding to OCaml. The original implementation for
this is in scheme and can be found at https://github.com/michaelballantyne/faster-miniKanren .

Features:
1) disequality constraints
2) relational standart library: lists, nats"""
maintainer: "Dmitrii Kosarev kakadu@pm.me"
homepage: "https://github.com/JetBrains-Research/OCanren"
bug-reports: "https://github.com/JetBrains-Research/OCanren/issues"

authors: [
  "Dmitrii Boulytchev https://github.com/dboulytchev"
  "Dmitrii Kosarev https://github.com/Kakadu"
  "Evgenii Moiseenko https://github.com/eupp"
  "Petr Lozov https://github.com/Lozov-Petr"
  "JetBrains Research https://research.jetbrains.org"
]

depends: [
  "ocaml"     { >= "4.10" }
  "dune"      { >= "2.5" }
  "dune-configurator"
  "ocamlfind"
  "camlp5"    { >= "8" }
  "logger-p5" { >= "0.4.5" }
  "GT"        { >= "0.4.0" }
  "benchmark" { with-test }
  "mtime"
]

build: [
  ["dune" "subst"] { dev }
  ["dune" "build" "-p" name "-j" jobs]
  [make "test"] { with-test }
]

dev-repo: "git+https://github.com/JetBrains-Research/OCanren.git"

url {
  src: "git+https://github.com/JetBrains-Research/OCanren"
}
