(env
 (dev
  (flags
   (:standard -w -27))))

(library
 (name pa_ocanren)
 (public_name OCanren.syntax)
 (modules writer pa_ocanren)
 (libraries camlp5)
 (preprocess
  (action
   (run %{project_root}/camlp5/pp5+dump.byte %{input-file}))))

;(executable
; (name pa_ocanren_test)
; (modules pa_ocanren_test)
; (libraries
; camlp5
;  pa_ocanren
;  pa_ppx
;  camlp5.pa_r.link
;  camlp5.pr_r.link
;  camlp5.parser_quotations.link)
; (preprocess
;  (action
;   (run
;    %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe
;    %{input-file}))))

(rule
 (targets pp5+gt+plugins+ocanren+dump.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT)
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+dump.byte)
 (package OCanren)
 (deps
  (package GT)
  %{project_root}/config/package-doc.cfg)
 (action
  (run
   mkcamlp5
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   ;%{deps}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+dump.exe)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   ;s%{deps}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+o.exe)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   -o
   %{targets})))

(rule
 (targets pp5+ocanren+o.exe)
 (deps
  %{project_root}/config/package-doc.cfg
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+ocanren+dump.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT)
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+ocanren+o.byte)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT)
  (:cmas pa_ocanren.cma))
 (action
  (run
   mkcamlp5
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+ocanren+logger+dump.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,GT.syntax,GT.syntax.all,logger.syntax
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   pr_dump.cmx
   -o
   %{targets}
   -)))

(rule
 (targets pp5+gt+plugins+ocanren+logger+o.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,GT.syntax,GT.syntax.all,logger.syntax
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+dump.byte)
 (package OCanren)
 (deps %{project_root}/config/package-doc.cfg)
 (action
  (run
   mkcamlp5
   -package
   camlp5.pa_o,camlp5.pr_dump,camlp5.extend,camlp5.quotations
   %{read-lines:../config/package-doc.cfg}
   -o
   %{targets})))
