(env
 (dev
  (flags
   (:standard -w -27 -rectypes)))
 (release
  (flags
   (:standard -rectypes))))

(library
 (name pa_ocanren)
 (public_name OCanren.syntax)
 (modules writer pa_ocanren)
 (libraries camlp5)
 (preprocessor_deps ./pp5+dump.exe)
 (preprocess
  (action
   (run %{project_root}/camlp5/pp5+dump.exe %{input-file}))))

(cram
 (deps ./pa_ocanren.cma))

(rule
 (targets pp5+gt+plugins+ocanren+dump.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT)
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+dump.byte)
 (package OCanren)
 (deps
  (package GT)
  %{project_root}/config/package-doc.cfg)
 (action
  (run
   mkcamlp5
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   ;%{deps}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+dump.exe)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   ;s%{deps}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+o.exe)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   -o
   %{targets})))

(rule
 (targets pp5+ocanren+o.exe)
 (deps
  %{project_root}/config/package-doc.cfg
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+ocanren+dump.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT)
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+ocanren+o.byte)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (package GT)
  (:cmas pa_ocanren.cma))
 (action
  (run
   mkcamlp5
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o,GT.syntax,GT.syntax.all
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+gt+plugins+ocanren+logger+dump.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,GT.syntax,GT.syntax.all,logger.syntax
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   pr_dump.cmx
   -o
   %{targets}
   -)))

(rule
 (targets pp5+gt+plugins+ocanren+logger+o.exe)
 (package OCanren)
 (deps
  %{project_root}/config/package-doc.cfg
  (:cmas pa_ocanren.cmxa))
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,GT.syntax,GT.syntax.all,logger.syntax
   %{read-lines:../config/package-doc.cfg}
   %{cmas}
   -o
   %{targets})))

(rule
 (targets pp5+dump.byte)
 (package OCanren)
 (deps %{project_root}/config/package-doc.cfg)
 (action
  (run
   mkcamlp5
   -package
   camlp5.pa_o,camlp5.pr_o,camlp5.pr_dump,camlp5.extend,camlp5.quotations
   %{read-lines:../config/package-doc.cfg}
   -o
   %{targets})))

(rule
 (targets pp5+dump.exe)
 (deps %{project_root}/config/package-doc.cfg)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5.pa_o,camlp5.pr_o,camlp5.pr_dump,camlp5.extend,camlp5.quotations
   %{read-lines:../config/package-doc.cfg}
   -o
   %{targets})))

(rule
 (targets pp5+o.exe)
 (deps %{project_root}/config/package-doc.cfg)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5.pa_o,camlp5.pr_o,camlp5.extend,camlp5.quotations
   %{read-lines:../config/package-doc.cfg}
   -o
   %{targets})))

(cram
 (package OCanren)
 (deps
  (package OCanren-ppx)
  %{project_root}/ppx/pp_distrib.exe
  %{project_root}/camlp5/pp5+ocanren+o.exe
  pp5+o.exe
  test007.ml
  test007.exe
  ;
  ))

(cram
 (package OCanren)
 (deps
  (package OCanren-ppx)
  %{project_root}/ppx/pp_distrib.exe
  %{project_root}/camlp5/pp5+ocanren+o.exe
  pp5+o.exe
  test008.ml
  test008.exe
  ;
  ))

(executables
 (names test007)
 (package OCanren)
 (public_names -)
 (modules test007)
 (flags
  (:standard
   -rectypes
   ;-dsource
   ))
 (preprocessor_deps
  %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe
  %{project_root}/config/delta-path.cfg
  (package OCanren-ppx))
 (preprocess
  (pps
   OCanren-ppx.ppx_distrib
   GT.ppx_all
   --
   -new-typenames ; With new type names
   -pp
   %{read:../config/delta-path.cfg}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe))
 (libraries OCanren OCanren.tester))

(executables
 (names test008)
 (package OCanren)
 (public_names -)
 (modules test008)
 (flags
  (:standard
   -rectypes
   ;-dsource
   ;
   ))
 (preprocessor_deps
  %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe
  %{project_root}/config/delta-path.cfg
  (package OCanren-ppx))
 (preprocess
  (pps
   OCanren-ppx.ppx_distrib
   GT.ppx_all
   --
   -new-typenames
   -pp
   %{read:../config/delta-path.cfg}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe))
 (libraries OCanren OCanren.tester))
