(executable
  (name discover)
  (modules Discover)
  (libraries str dune.configurator)
)

(rule
  (targets camlp5-flags.cfg gt-flags.cfg logger-flags.cfg)
  (action (run ./discover.exe -all-flags))
)

(rule
  (targets tests.txt tests.dune)
  (alias discover-tests)
  (deps tests.dune.tpl (source_tree ../regression))
  (mode (promote-into ../regression))
  (action (run ./discover.exe -tests -tests-dune -tests-dir %{project_root}/regression))
)
