(library
  (name ppx_distrib)
  (public_name OCanren.ppx_distrib)
  (kind ppx_rewriter)
  (libraries base ppxlib)
  (modules ppx_distrib ppx_distrib_expander)
  (preprocess (pps ppxlib.metaquot))
)

(executable
  (public_name pp_distrib)
  (libraries ppx_distrib)
  (modules pp_distrib)
)

(library
  (name ppx_noinjected)
  (public_name OCanren.ppx_noinjected)
  (kind ppx_rewriter)
  (libraries base ppxlib)
  (modules ppx_noinjected)
  (flags (:standard -warn-error -A -rectypes))
  (preprocess (pps ppxlib.metaquot))
)

(executable
  (public_name pp_noinjected)
  (libraries ppx_noinjected)
  (modules pp_noinjected)
)